# FastAPI_OpenAlex

./: API_elastic.py  README.md  pyproject.toml
